--- a/react_weatherapp/src/index.css
+++ b/react_weatherapp/src/index.css
@@ -79,7 +79,7 @@ code {
 
 
 .search {
-  width: 100%;
+  width: 95%;
   position: relative
 }
 
@@ -286,7 +286,7 @@ code {
   color: #fff;
   font-weight: 700;
   box-shadow:10px 15px 25px #aaa;
-  border-right: 1px solid black;
+  border-right: 1px solid #fff;
   transition: all 300ms ease-in;
   z-index: 1;
  }
@@ -302,7 +302,7 @@ code {
   align-items: center;
 }
 .icon__wrapper i{
-  font-size: 100px;
+  font-size: 80px;
   padding: 5px;
   margin-bottom: 5px;
 }
